udl/test/corpus/include-code.txt
=============
Include Valid
=============
include MyMacros

Class MyPackage.MyClass {

//
}
---

(source_file
  (include_code
    (keyword_include)
    (include_clause
      (identifier)))
  (class_definition
    (keyword_class)
    (identifier)
    (class_body
      (line_comment_1))))

======================
Include Multiple Files
======================
include (MyMacros, YourMacros) 
Class barricade {

}
---

(source_file
  (include_code
    (keyword_include)
    (include_clause
      (identifier)
      (identifier)))
  (class_definition
    (keyword_class)
    (identifier)
    (class_body)))

====
Import
====
Import packages

Class name {}
---

(source_file
  (import_code
    (keyword_import)
    (include_clause
      (identifier)))
  (class_definition
    (keyword_class)
    (identifier)
    (class_body)))

===
Valid Import,include, includegenerator
===
Import packagelist  
Include includecode  
IncludeGenerator includegeneratorcode  

/// description 
Class package.shortclassname Extends superclasslist [ DependsOn = MyApp.Class1 ] 
{  

}
---

(source_file
  (import_code
    (keyword_import)
    (include_clause
      (identifier)))
  (include_code
    (keyword_include)
    (include_clause
      (identifier)))
  (include_generator
    (keyword_includegenerator)
    (include_clause
      (identifier)))
  (documatic_line)
  (class_definition
    (keyword_class)
    (identifier)
    (class_extends
      (keyword_extends)
      (identifier))
    (class_keywords
      (class_keyword
        (class_keyword_depends_on
          (identifier)
          (rhs))))
    (class_body)))
